sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/Inventory_Item_Group__c.object-meta.xml
<CustomObject>
    <label>Inventory Commodity Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Commodity Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>