sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>