sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/Performs_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Performs_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performs Transactions</label>
    <type>Checkbox</type>
</CustomField>