sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/PO_Credit_GLA__c.field-meta.xml
<CustomField>
    <fullName>PO_Credit_GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PO Credit GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Commodity Codes (PO Credit GLA)</relationshipLabel>
    <relationshipName>Inventory_Item_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>