sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/Requires_Contract__c.field-meta.xml
<CustomField>
    <fullName>Requires_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Contract</label>
    <type>Checkbox</type>
</CustomField>