sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/SO_Credit_GLA__c.field-meta.xml
<CustomField>
    <fullName>SO_Credit_GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SO Credit GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Commodity Codes (SO Credit GLA)</relationshipLabel>
    <relationshipName>Inventory_Item_Groups4</relationshipName>
    <type>Lookup</type>
</CustomField>