sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/SO_Debit_GLA__c.field-meta.xml
<CustomField>
    <fullName>SO_Debit_GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SO Debit GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Commodity Codes (SO Debit GLA)</relationshipLabel>
    <relationshipName>Inventory_Item_Groups5</relationshipName>
    <type>Lookup</type>
</CustomField>