sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/WO_Credit_GLA__c.field-meta.xml
<CustomField>
    <fullName>WO_Credit_GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WO Credit GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Commodity Codes (WO Credit GLA)</relationshipLabel>
    <relationshipName>Inventory_Item_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>