sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/fields/WO_Debit_GLA__c.field-meta.xml
<CustomField>
    <fullName>WO_Debit_GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WO Debit GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Commodity Codes (WO Debit GLA)</relationshipLabel>
    <relationshipName>Inventory_Item_Groups3</relationshipName>
    <type>Lookup</type>
</CustomField>