sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commodity_Code__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>